--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@gsap/react": "^2.1.0",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.1",
     "@testing-library/jest-dom": "^5.17.0",
