--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "three": "^0.163.0",
     "web-vitals": "^2.1.4"
   },
