--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.11.0",
     "framer-motion": "^11.0.25",
     "npm-check": "^6.0.1",
     "react": "^18.2.0",
